<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_20_dp">

        <TextView
            android:id="@+id/discount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/discount"
            android:textColor="@color/medium_grey"
            android:textSize="@dimen/dimen_18_sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:background="@drawable/edittext_bordered"
            android:hint="@string/enter_your_discount_title"
            android:inputType="text"
            android:padding="@dimen/dimen_10_dp"
            android:textColor="@color/medium_grey"
            android:textColorHint="@color/light_bluish_grey"
            android:textSize="@dimen/dimen_16_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/discount_text" />

        <EditText
            android:id="@+id/coupon_per_user_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:background="@drawable/edittext_bordered"
            android:hint="@string/no_of_coupons_per_user"
            android:inputType="number"
            android:padding="@dimen/dimen_10_dp"
            android:textColor="@color/medium_grey"
            android:textColorHint="@color/light_bluish_grey"
            android:textSize="@dimen/dimen_16_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_edittext" />

        <EditText
            android:id="@+id/first_discount_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:background="@drawable/edittext_bordered"
            android:hint="@string/discount_for_first_hour"
            android:inputType="number"
            android:padding="@dimen/dimen_10_dp"
            android:textColor="@color/medium_grey"
            android:textColorHint="@color/light_bluish_grey"
            android:textSize="@dimen/dimen_16_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coupon_per_user_edittext" />

        <EditText
            android:id="@+id/extra_discount_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:background="@drawable/edittext_bordered"
            android:hint="@string/discount_for_extra_hours"
            android:inputType="number"
            android:padding="@dimen/dimen_10_dp"
            android:textColor="@color/medium_grey"
            android:textColorHint="@color/light_bluish_grey"
            android:textSize="@dimen/dimen_16_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_discount_edittext" />

        <TextView
            android:id="@+id/discount_note_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5_dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/discount_note"
            android:textColor="@color/medium_grey"
            android:textSize="@dimen/dimen_14_sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/extra_discount_edittext" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40_dp"
            android:background="@drawable/theme_button"
            android:fontFamily="@font/roboto_bold"
            android:padding="10dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_14_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/discount_note_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>