<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background"
        android:padding="@dimen/dimen_20_dp">

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/dimen_30_dp"
            android:layout_height="@dimen/dimen_2_sp"
            android:background="@color/patterns_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/invoice_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:text="@string/invoice"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_24_sp"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            tools:ignore="LabelFor" />

        <RelativeLayout
            android:id="@+id/reserve_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:paddingTop="@dimen/dimen_10_dp"
            android:paddingBottom="@dimen/dimen_10_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invoice_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/reservation_amount"
                android:textColor="@color/dim_gray"
                android:textSize="@dimen/dimen_14_sp"
                android:fontFamily="@font/roboto_bold" />

            <TextView
                android:id="@+id/reserve_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/base_pay"
                android:textColor="@color/dim_gray"
                android:textSize="@dimen/dimen_14_sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/reserve_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_10_dp"
            android:paddingBottom="@dimen/dimen_10_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reserve_price_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/reservation_time"
                android:textColor="@color/dim_gray"
                android:textSize="@dimen/dimen_14_sp"
                android:fontFamily="@font/roboto_bold" />

            <TextView
                android:id="@+id/reserve_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/base_pay"
                android:textColor="@color/dim_gray"
                android:textSize="@dimen/dimen_14_sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/payment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reserve_time_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/amount_payable"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16_sp"
                android:fontFamily="@font/roboto_bold" />

            <TextView
                android:id="@+id/amount_payable_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingTop="@dimen/dimen_10_dp"
                android:paddingBottom="@dimen/dimen_10_dp"
                android:text="@string/base_pay"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16_sp"
                android:fontFamily="@font/roboto_bold" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pay_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_60_dp"
            android:background="@drawable/theme_button"
            android:padding="@dimen/dimen_10_dp"
            android:text="@string/pay"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_14_sp"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payment_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>