<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_20_dp">

        <TextView
            android:id="@+id/vehicle_details_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/vehicle_details"
            android:textColor="@color/medium_grey"
            android:textSize="@dimen/dimen_16_sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/vehicle_number_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:background="@drawable/edittext_bordered"
            android:hint="@string/enter_vehicle_number"
            android:padding="10dp"
            android:textColor="@color/medium_grey"
            android:textColorHint="@color/light_bluish_grey"
            android:textSize="@dimen/dimen_16_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vehicle_details_text" />

        <Spinner
            android:id="@+id/vehicle_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:background="@drawable/edittext_bordered"
            android:textColor="@color/medium_grey"
            android:textSize="@dimen/dimen_14_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vehicle_number_edittext" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40_dp"
            android:background="@drawable/theme_button"
            android:fontFamily="@font/roboto_bold"
            android:padding="10dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_14_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vehicle_type_spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>